--- a/style.css
+++ b/style.css
@@ -1,7 +1,13 @@
 body {
     margin: 0;
   }
-  
+
+  #content {
+    margin-left:25%;
+    padding:1px 16px;
+    height:1000px;
+  }
+
   ul {
     list-style-type: none;
     margin: 0;
@@ -13,26 +19,30 @@ body {
     overflow: auto;
   }
   
-  li a {
+  li button {
     display: block;
     color: #000;
     padding: 8px 16px;
     text-decoration: none;
+    border: none;
+    width: 100%;
   }
-  
-  li a.active {
+
+  li button.active {
     background-color: #4CAF50;
     color: white;
   }
-  
-  li a:hover:not(.active) {
+
+  li button:hover {
     background-color: #555;
     color: white;
   }
 
-.fade-enter-active, .fade-leave-active {
-  transition: opacity .5s;
+.component-fade-enter-active, .component-fade-leave-active {
+  transition: all .6s ease-out;
 }
-.fade-enter, .fade-leave-to /* .fade-leave-active below version 2.1.8 */ {
+.component-fade-enter, .component-fade-leave-to
+/* .component-fade-leave-active below version 2.1.8 */ {
   opacity: 0;
+  transform: translateX(10px);
 }
