--- a/style.css
+++ b/style.css
@@ -24,6 +24,7 @@ body {
     color: #000;
     padding: 8px 16px;
     text-decoration: none;
+    font-family: 'Roboto', sans-serif;
     border: none;
     width: 100%;
   }
