--- a/style.css
+++ b/style.css
@@ -6,10 +6,33 @@ body {
   #content {
     position: fixed;
     margin-left:25%;
+    width: 75%;
+    height: 80%;
     padding: 0%;
-    
     /*padding:1px 16px;*/
     font-family: 'Open Sans', sans-serif;
+  }
+
+  #content h2{
+    text-align: center;
+  }
+  .demoHolder{
+    margin: 0 auto;
+    max-width: 75%;
+  }
+
+  .videoWrapper {
+    position: relative;
+    padding-bottom: 56.25%; /* 16:9 */
+    padding-top: 25px;
+    height: 0;
+  }
+  .videoWrapper iframe {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
   }
 
   #side-bar {
@@ -53,9 +76,27 @@ body {
     color: white;
   }
 
-  #bot-nav button {
+  #bot-nav{
     position: fixed;
     bottom: 0;
+    width: 100%;
+  }
+
+  #bot-nav p {
+    position: fixed;
+    bottom: 2em;
+    left: 62.5%;
+    font-family: 'Roboto Condensed', sans-serif;
+    font-weight: bold;
+    font-size: 1em;
+  }
+
+  #bot-nav button {
+    /*position: fixed;
+    bottom: 0;*/
+    position: fixed;
+    bottom: 0;
+    height: 1em;
     width: 37.5%;
     color: black;
     border: none;
