--- a/style.css
+++ b/style.css
@@ -5,8 +5,8 @@ body {
 
   h2 {
     font-size: 3em;
-    padding: 0;
-    margin: 0em 0em;
+    /*padding: 0;
+    margin: 0em 0em;*/
     color: #2f2f63;
     font-family: 'Roboto Condensed', sans-serif;
     font-weight: 700;
@@ -23,12 +23,13 @@ body {
   }
 
   #content .title{
-    text-align: center;
+    /*text-align: center;*/
   }
 
   .frame{
-  margin: 1em;
-  }
+  margin-top: 5vw;
+  margin-left: 5vw;
+ }
 
   .item-1{ grid-area: left}
   .item-2{ grid-area: right}
@@ -36,12 +37,15 @@ body {
     display: grid;
     grid-template-areas: 'left right';
   }
-  
-  .project-title{
+
+  .project-title h2{
+    margin-top: 0;
+    margin-bottom: 1em;
+    /*
     grid-area: top;
     font-size: 2em;
     font-family: 'Roboto Condensed', sans-serif;
-    font-weight: 700;
+    font-weight: 700;*/
   }
   .project-image{grid-area: left}
   .project-description{
@@ -121,7 +125,8 @@ body {
     width: 25%;
     height: 100%;
     position: fixed;
-    background-color: #363D3F;
+    background-color: #1F2324;
+    /*background-color: #363D3F;*/
   }
 
   #side-bar ul {
@@ -138,7 +143,8 @@ body {
   li button {
     display: block;
     color: #AFBFBF;
-    background-color: #363D3F;
+    /*background-color: #363D3F;*/
+    background-color: #1F2324;
     padding: 8px 16px;
     font-size: 1.5em;
     text-decoration: none;
